@@ -63,6 +63,8 @@ version 1.7.1 Swarog (??/??/????):
   - Cash Receipts (in Poland known as "druki KP") (alec)
   - lms-sendinvoices: fixed invoice number in mail subject and body (alec)
   - BTS#0000369: preparing statements for strings quoting in perl scripts (alec)
+  - lmsd/pinger: using more glibc instead of kernel headers (alec)
+  - lmsd: fixed long (above 60 sec.) reload problem (alec)
     
 version 1.7.0 Klorel (13/05/2005):
 
